# research-impl

./: ComputeConstraints.m  ComputeFunctionsAndRelatedFields.m  ComputeGrid.m  PlotGridResults.m  PlotGridSurfaceResults.m  example.m
CgleCppProject/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  input.txt
CgleCppProject/PackageProjectInclude/cubic_quintic_qinzburg_landau_equations/: version.h
CgleCppProject/include/: cell.h  constants.h  constraint.h  fileReader.h  functionHandler.h  grid.h  gridDetails.h  helper.h
CgleCppProject/include/grid/: grid.h
CgleCppProject/source/: constraint.cpp  fileReader.cpp  functionHandler.cpp  greeter.cpp  grid.cpp  gridDetails.cpp
CgleCppProject/test/source/: cell.cpp
CgleMatlab/: ComputeConstraints.m~  ComputeFunctionsAndRelatedFields.m  PerformGridPertubation.m  PerformNovelStabilityAnalysis.m  PerformNovelStabilityAnalysis.m~  PlotMesh.m  PlotMesh.m~  test.m  test.m~
